# SideAssist.Client.Qt

./: .gitmodules  CMakeLists.txt  todo.md
apps/: CMakeLists.txt
apps/client_id_tester/: CMakeLists.txt
apps/client_id_tester/src/: main.cpp
apps/echo/: CMakeLists.txt
apps/echo/src/: echo.cpp
apps/screenshot_copier/: CMakeLists.txt
apps/screenshot_copier/src/: screenshot_copier.cpp
include/: client.hpp  field_enum.hpp  global.hpp  named_value.cpp  named_value.hpp  value_validator.hpp
src/: client.cpp  client_message_logger.cpp  value_validator.cpp
src/client/: client_handle_message.cpp  client_logging.cpp  client_option.cpp  client_parameter.cpp
src/value_validators/: join_value_validator.cpp  list_item_value_validator.cpp  option_value_validator.cpp  path_value_validator.cpp  string__value_validator.cpp  type_value_validator.cpp  union_value_validator.cpp
test/: CMakeLists.txt  test_value_validator.cpp
